...
                    description,
                    fontSize = 20.sp,
                    textAlign = TextAlign.Center,
                    modifier = Modifier
                        .padding(top = 20.dp)
                        .padding(horizontal = 20.dp)
                        .testTag("symbol_description_text")
                )
            }
        } ?: run {
            Column(
                modifier = Modifier
                    .padding(innerPadding)
...
